@@ -15,10 +15,9 @@ case "${SCM}" in
     ;;
 esac
 
-if grep AC_INIT ../configure.ac | cut -d ',' -f 2 | grep "svn${REV}" > /dev/null; then
-    REV='1'
-else
-    REV="svn${REV}"
+## change version number ##
+if ! grep AC_INIT ../configure.ac | cut -d ',' -f 2 | grep "svn${REV}" > /dev/null; then
+    sed -i "s/AC_INIT(\[pcmanx-gtk2\],\[\([0-9]*\)\.\([0-9]*\)\.\([0-9]*\)\]/AC_INIT([pcmanx-gtk2],[\1.\2.\3-svn${REV}]/" ../configure.ac
 fi
 
 [ ! -f '../configure' ] && cd .. && ./autogen.sh && cd build
@@ -26,103 +25,26 @@ fi
 
 VER="$(../configure --version | head -n1 | awk '{ print $3 }')"
 
-if make dist-bzip2 > /dev/null; then
+if make dist-gzip > /dev/null; then
     [ -d "pcmanx-gtk2-${VER}" ] && rm -fr "pcmanx-gtk2-${VER}"
     [ -f "pcmanx-gtk2_${VER}.orig.tar.gz" ] && rm -f "pcmanx-gtk2_${VER}.orig.tar.gz"
-    tar xjf "pcmanx-gtk2-${VER}.tar.bz2"
+    mv "pcmanx-gtk2-${VER}.tar.gz" "pcmanx-gtk2_${VER}.orig.tar.gz"
+    tar xf "pcmanx-gtk2_${VER}.orig.tar.gz"
 else
     exit 1
 fi
 
+## rollback version number ##
+sed -i "s/AC_INIT(\[pcmanx-gtk2\],\[\([0-9]*\)\.\([0-9]*\)\.\([0-9]*\)-svn\([0-9]*\)\]/AC_INIT([pcmanx-gtk2],[\1.\2.\3]/" ../configure.ac
+
 pushd "pcmanx-gtk2-${VER}"
-dh_make --multi --quilt --copyright gpl2 --file ../"pcmanx-gtk2-${VER}.tar.bz2"
-cd debian && rm -f *.ex *.EX && cd ..
-mkdir debian/source && echo "3.0 (quilt)" > debian/source/format
-cat > debian/control <<ENDLINE
-Source: pcmanx-gtk2
-Section: x11
-Priority: optional
-Maintainer: ${DEBFULLNAME} <${DEBEMAIL}>
-Build-Depends: debhelper (>= 7.0.50~), quilt (>= 0.46-7~), intltool, autotools-dev, libgtk2.0-dev, libnotify-dev, xulrunner-1.9.2-dev, libx11-dev
-Standards-Version: 3.8.4
-Homepage: http://code.google.com/p/pcmanx-gtk2/
-
-Package: pcmanx-gtk2
-Architecture: any
-Depends: \${shlibs:Depends}, \${misc:Depends}, libglib2.0-0, libgtk2.0-0, libpango1.0-0, libstdc++6, libx11-6
-Description: user-friendly telnet client mainly targets BBS users
- PCMan X is a newly developed GPL'd version of PCMan, a full-featured
- famous BBS client. It aimed to be an easy-to-use yet full-featured telnet
- client facilitating BBS browsing with the ability to process double-byte
- characters. Some handy functions like tabbed-browsing, auto-login and
- a built-in ANSI editor enabling colored text editing are also provided.
- .
- This version is developed with pure gtk2 and xft, thus has much low
- dependency.
-
-Package: mozilla-plugin-pcmanx
-Section: web
-Architecture: any
-Depends: \${shlibs:Depends}, \${misc:Depends}
-Recommends: iceweasel | iceape-browser | firefox | abrowser | seamonkey-browser
-Description: pcmanx plugin for Mozilla based browser
- This plugin adds support for telnet:// protocol to your Mozilla based
- browser. The protocol engine is done by PCManX and the output window
- is embedded in a webpage in the browser window.
- .
- PCMan X is a newly developed GPL'd version of PCMan, a full-featured
- famous BBS client. It aimed to be an easy-to-use yet full-featured telnet
- client facilitating BBS browsing with the ability to process double-byte
- characters. Some handy functions like tabbed-browsing, auto-login and
- a built-in ANSI editor enabling colored text editing are also provided.
-
-Package: libpcmanx-core0
-Section: libs
-Architecture: any
-Depends: \${shlibs:Depends}, \${misc:Depends}
-Description: core rendering library of pcmanx
- This package contains the core rendering function of pcmanx in dynamic
- linked library format.
- .
- PCMan X is a newly developed GPL'd version of PCMan, a full-featured
- famous BBS client. It aimed to be an easy-to-use yet full-featured telnet
- client facilitating BBS browsing with the ability to process double-byte
- characters. Some handy functions like tabbed-browsing, auto-login and
- a built-in ANSI editor enabling colored text editing are also provided.
-ENDLINE
-cat > debian/pcmanx-gtk2.install <<ENDLINE
-usr/bin
-usr/share
-ENDLINE
-cat > debian/libpcmanx-core0.install <<ENDLINE
-usr/lib/libpcmanx_core*.so.*
-ENDLINE
-cat > debian/mozilla-plugin-pcmanx.install <<ENDLINE
-usr/lib/xulrunner-devel-*/bin/plugins /usr/lib/pcmanx-gtk2
-usr/lib/xulrunner-devel-*/bin/components /usr/lib/pcmanx-gtk2
-ENDLINE
-cat > debian/mozilla-plugin-pcmanx.links <<ENDLINE
-usr/lib/pcmanx-gtk2/plugins/pcmanx-plugin.so usr/lib/mozilla/plugins/pcmanx-plugin.so
-usr/lib/pcmanx-gtk2/components/TelnetProtocol.js usr/lib/mozilla/components/TelnetProtocol.js
-usr/lib/pcmanx-gtk2/components/pcmanx_interface.xpt usr/lib/mozilla/components/pcmanx_interface.xpt
-usr/lib/pcmanx-gtk2/components/pcmanx.html usr/lib/mozilla/components/pcmanx.html
-usr/lib/pcmanx-gtk2/components/pcmanx.png usr/lib/mozilla/components/pcmanx.png
-usr/lib/pcmanx-gtk2/plugins/pcmanx-plugin.so usr/lib/xulrunner-addons/plugins/pcmanx-plugin.so
-usr/lib/pcmanx-gtk2/components/TelnetProtocol.js usr/lib/xulrunner-addons/components/TelnetProtocol.js
-usr/lib/pcmanx-gtk2/components/pcmanx_interface.xpt usr/lib/xulrunner-addons/components/pcmanx_interface.xpt
-usr/lib/pcmanx-gtk2/components/pcmanx.html usr/lib/xulrunner-addons/components/pcmanx.html
-usr/lib/pcmanx-gtk2/components/pcmanx.png usr/lib/xulrunner-addons/components/pcmanx.png
-ENDLINE
+cp -a ../../debian .
 cat > debian/changelog <<ENDLINE
-pcmanx-gtk2 (${VER}-${REV}) experimental; urgency=low
+pcmanx-gtk2 (${VER}-1) experimental; urgency=low
 
-  * Developement release.
+  * Development release.
 
  -- ${DEBFULLNAME} <${DEBEMAIL}>  $(LANG=C date -R)
-ENDLINE
-cat >> debian/rules <<ENDLINE
-override_dh_auto_configure:
-	dh_auto_configure -- --enable-debug --enable-plugin --enable-iplookup --enable-proxy --enable-wget --enable-libnotify
 ENDLINE
 debuild -uc -us
 popd
