@@ -16,6 +16,7 @@
 	debian/mozilla-plugin-pcmanx.links,
 	debian/pcmanx-gtk2.install,
 	debian/rules: Add a rough debian folder.
+	* build/snapshot-deb.sh: Polish deb packaging script.
 
 2010-06-15  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
 
